k8s/manifests/ingress-class.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: nginx
  annotations:
spec:
  controller: k8s.io/ingress-nginx
