k8s/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    
spec:
  rules:
    - host: hello.lab.bolster.online
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hello-world
                port:
                  number: 80

  tls:
    - hosts:
        - hello.lab.bolster.online
      secretName: lab-bolster-online-tls
